# climatereconstructionAI

./: .gitignore  LICENSE  MANIFEST.in  MultiChannelPConvUNet.py  MultiChannelPConvUnet.py  PConvLSTM.py  README.md  config.py  debug.py  environment-cuda.yml  environment.yml  evaluate.py  evaluateLSTM.py  evaluateMultiCh.py  evaluation.py  evaluation2.py  evaluator.py  exploration_exaocean.ipynb  local_settings.py  loss.py  mod-minimum-1.inp.pth  net.py  netcdfloader.py  opt.py  places2.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  start-100.sh  start-singular.sh  start-training.sh  start.sh  tall .  test.py  train.py  trainLSTM.py  trainMultiCUNet.py
.github/workflows/: main.yml
climatereconstructionai/: __init__.py  config.py  evaluate.py  train.py  train_transformer.py  train_transtransformer.py  transformer_infer.py  transformer_scripter.py  transformer_training.py  tuner.py
climatereconstructionai/loss/: extreme_loss.py  feature_loss.py  gan_loss.py  gauss_loss.py  get_loss.py  hole_loss.py  inpainting_loss.py  kldiv_loss.py  total_variation_loss.py  utils.py  valid_loss.py  var_loss.py
climatereconstructionai/metrics/: get_metrics.py
climatereconstructionai/model/: EncDecCNNTransformer.py  EncDecLGTransformer.py  EncDecSpatialTransformer.py  ICONTransformer.py  ICONTransformer_decomp.py  ICONTransformer_decomp_abs.py  ICONTransformer_proj.py  attention_module.py  bounds_scaler.py  conv_configs.py  conv_lstm_module.py  core_model_crai.py  core_model_resushuffle.py  core_model_resushuffle_vae.py  discriminator.py  encoder_decoder.py  generator.py  net.py  partial_conv_module.py  pyramid_model.py  pyramid_step_model.py  traj_gru_module.py  trans_u_net.py  transformer_helpers.py  transformer_model.py  transformer_net.py  transformer_net_2.py  transformer_net_3.py  vae_module.py
climatereconstructionai/static/: dataset_format.json
climatereconstructionai/utils/: data_preprocessing.py  early_stopping.py  evaluation.py  featurizer.py  grid_utils.py  io.py  masked_batchnorm.py  netcdfchecker.py  netcdfformatter.py  netcdfloader.py  netcdfloader_patches.py  netcdfloader_samples.py  netcdfloader_trans.py  normalizer.py  optimization.py  plotdata.py  profiler.py  twriter.py  twriter_t.py  visualization.py  weights.py
data/: 20cr_20220114.pth  20crtasgn72.pth
data/masks/: hadcrut_missmask_1.nc  masks_tas_hadcrut_187709_189308.nc  steady_tas_hadcrut.nc
data/test/: tas_hadcrut_187709_189308.nc
data/train/: 20cr.json
data/val/: 20cr.json
demo/: README.md  demo-1_args.txt  demo-2_args.txt  demo_args.txt
demo/inputs/test_large/: tas_hadcrut_187709_189308.nc
demo/outputs/: .gitignore
evaluation/script/: create-evaluation-report.sh  extract_info.py  h5toNC.sh
h5/: outVSgt_YMFM_rmse  outVSgt_timcor.nc
h5/script/: create-evaluation-report.sh  evaluate.py  extract_examples.sh  h5toNC.sh  h5toNC.sh~  netcdf_structure.txt  netcdf_structure.txt-1850-2018  netcdf_structure.txt-1870-2005  prepare-structure-template.sh
loss/: hole_loss.py  utils.py
model/: CrossEntropyPConvLSTM.py  LSTM_1.py  MultiChannelPConvUNet.py  PConvLSTM.py  attention_module.py  conv_configs.py  conv_lstm_module.py  encoder_decoder.py  loss.py  net.py  partial_conv_module.py  pconv_lstm_module.py
reconstructions/: readme  readme~
slurm/: README.md  setup-modules.txt  start-evaluation-levante.sh  start-evaluation-local.sh  start-evaluation-mistral.sh  start-testing-trial.sh  start-testing.sh  start-training-local.sh  start-training-tmp.sh  start-training-trial.sh  start-training.sh
src/climatereconstructionai/: config.py  evaluate.py  train.py
start-scripts/: README.md  start-evaluation-levante.sh  start-evaluation-local.sh  start-evaluation-mistral.sh  start-evaluation-test.sh  start-lstm-evaluation-levante.sh  start-lstm-evaluation-mistral.sh  start-lstm-training-levante.sh  start-lstm-training-local.sh  start-lstm-training-mistral.sh  start-multich-evaluation-levante.sh  start-multich-evaluation-mistral.sh  start-multich-training-levante.sh  start-multich-training-local.sh  start-multich-training-mistral.sh  start-training-levante.sh  start-training-local.sh  start-training-mistral.sh
tests/: .gitignore  eval-1.inp  test_evaluation.py  test_training.py  train-1.inp  train-2.inp
tests/ref/: 10.pth  15.pth  channel-infusion.inp.pth  channel-memory.inp.pth  minimum-1.inp.pth  minimum-1_infilled.nc  minimum-2.inp.pth  test-1_100.pth  test-1_infilled.nc  test-1_output_comp.nc
train_and_evaluate/: evaluate.py  evaluate2.py  evaluateLSTM.py  evaluateMultiCh.py  train.py  trainLSTM.py  trainMultiCUNet.py
utils/: evaluation.py  evaluator.py  metrics.py  netcdfloader.py  weights.py
(+39 files in other folders)
