[tool.poetry]
name = "climatereconstructionAI"
version = "0.1.0"
description = "Software to train climate reconstruction technology (image inpainting with partial convolutions) with numerical model output and to re-fill missing values in observational datasets (like HadCRUT4) using the trained models."
authors = ["Climate Informatics and Technology group at DKRZ (Deutsches Klimarechenzentrum"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7+"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0","imageio==2.9.0","pandas==1.2.5","fpdf==1.7.2","torch==1.8.0","h5py==3.2.1","cdo==1.5.5","tqdm==4.59.0","torchvision==0.2.1","numpy==1.20.1","matplotlib==3.4.3","netCDF4==1.5.8","python_dateutil==2.8.2","tensorboardX==2.4.1"]
build-backend = "poetry.core.masonry.api"
